java: address #1044 review — typo fix + lock-doc + eviction test
I1: JobNotFoundException javadoc said JobError::Other(BackendError::
NotFound) but the actual Rust variant is JobError::Backend(
BackendError::NotFound). Pure doc typo. JobTerminalException was
already correct (references JobError::JobTerminal which matches
jobs.rs:718 exactly).

I2: Two timeout policies coexist in jobs_ffi.rs:
parse_ffi_timeout_secs (NaN/Inf → reject) and mesh_job_proxy_wait
(NaN/Inf → silently alias to "no timeout"). Both intentional — the
new strict form matches napi/pyo3; the older permissive form stays
for back-compat. Added a 7-line comment above parse_ffi_timeout_secs
documenting the policy choice and noting the coexistence is
deliberate (don't unify without a deprecation cycle for proxy_wait).

I3: JobController.recvEvent holds the controller lock for the full
long-poll duration (potentially seconds). The pattern matches
JobProxy.await()'s existing lock-rationale doc at line 151-156.
Added a parallel 6-line comment above recvEvent's synchronized
block explaining the use-after-free fence: a concurrent close() must
not free the FFI handle while the Rust runtime is still polling on
it.

I4: Added direct LRU eviction test in MeshJobsTest. Picked the
"no env injection" approach — populate cache to default cap (256)
plus 1 overflow entry, assert the evicted LRU proxy's toString()
reports closed=true while the overflow entry stays open. Confirms
the removeEldestEntry → JobProxy.close() → mesh_job_proxy_free path
fires correctly. The 257 FFI allocations run in 24ms — acceptable
test cost. Tests: 124 reactor total unchanged; mcp-mesh-sdk module
61 → 62.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>