@@ -230,6 +230,64 @@ class MeshJobsTest {
     }
 
     /**
+     * Direct eviction-path coverage: populate the cache past the default
+     * cap of 256 and verify that {@code removeEldestEntry} fires —
+     * (a) cache size stays bounded at the cap,
+     * (b) the evicted {@link JobProxy} has {@code close()} called (its
+     *     {@code toString()} reports {@code closed=true}), and
+     * (c) re-fetching the evicted key constructs a NEW proxy instance.
+     *
+     * <p>The companion {@link #getOrCreateProxy_cacheGrowsUpToCap()}
+     * exercises only the pre-eviction growth path; this test exercises
+     * the resource-cleanup guarantee (the {@code JobProxy.close()} call
+     * inside {@code removeEldestEntry}) that the growth-only test
+     * cannot reach.
+     *
+     * <p>Mirrors the Python {@code test_meshjob_events.py} and TypeScript
+     * {@code jobs.spec.ts} LRU-eviction tests. Those runtimes can mutate
+     * their env at test time (pytest's {@code monkeypatch.setenv} /
+     * mutating {@code process.env}); the JVM's env table is effectively
+     * read-only without {@code --add-opens java.base/java.lang}, so we
+     * exercise the eviction path at the default cap (256) instead of
+     * lowering it to 2. The eviction logic is identical at any cap —
+     * what matters is that {@code removeEldestEntry} fires and that
+     * {@code JobProxy.close()} is invoked on the evicted entry. 257
+     * lightweight FFI proxy allocations stay well under 1 second.
+     */
+    @Test
+    void getOrCreateProxy_evictsLruAndClosesProxyAtCap() {
+        int cap = MeshJobs.proxyCacheMax();
+        // Insert the LRU sentinel first — this entry will be the
+        // least-recently-used after we populate the cache to the cap.
+        JobProxy lru = MeshJobs.getOrCreateProxy(FAKE_REGISTRY, "job-lru");
+        assertFalse(lru.toString().contains("closed=true"),
+            "freshly constructed proxy must not be closed");
+        // Fill the cache to its cap; each new insert pushes job-lru
+        // further from the most-recent end.
+        for (int i = 0; i < cap - 1; i++) {
+            MeshJobs.getOrCreateProxy(FAKE_REGISTRY, "filler-" + i);
+        }
+        assertEquals(cap, MeshJobs.cacheSizeForTest(),
+            "cache should be exactly at cap before the eviction-triggering put");
+        // One more insert — this is the put that overflows and triggers
+        // removeEldestEntry, which closes the LRU and drops it from the map.
+        JobProxy overflow = MeshJobs.getOrCreateProxy(FAKE_REGISTRY, "overflow");
+        assertEquals(cap, MeshJobs.cacheSizeForTest(),
+            "cache must stay bounded at cap after overflow");
+        // The eldest (job-lru) must have been close()d by removeEldestEntry.
+        assertTrue(lru.toString().contains("closed=true"),
+            "evicted JobProxy must have close() called by removeEldestEntry; "
+                + "toString reported: " + lru.toString());
+        // overflow itself is still open — only the eldest is evicted.
+        assertFalse(overflow.toString().contains("closed=true"));
+        // Re-fetching the evicted key constructs a NEW proxy instance —
+        // the original was dropped from the cache.
+        JobProxy refetch = MeshJobs.getOrCreateProxy(FAKE_REGISTRY, "job-lru");
+        assertNotSame(lru, refetch,
+            "re-fetching the evicted key must construct a new proxy instance");
+    }
+
+    /**
      * Smoke check: postEvent's argument validation runs BEFORE the
      * registry URL resolution. A caller passing an invalid jobId must
      * see the IllegalArgumentException regardless of MCP_MESH_REGISTRY_URL.
